# openrouter-python-companion

./: .gitignore  LICENSE  README.md  example_structured_output.py  openrouter_companion_bug_report.md  pyproject.toml  requirements.txt
src/openrouter_companion/: __init__.py  enums.py  filters.py  types.py  utils.py
src/openrouter_companion/prompt/: __init__.py  base.py  string_template.py  template_loader.py
tests/: factories.py  test_enums.py  test_filters.py  test_model_info.py  test_prompts.py
